add css bootstrap

--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -70,6 +70,35 @@
     <Content Include="Administrator\Default.aspx" />
     <Content Include="Administrator\UserControls\ctrlSetServer.ascx" />
     <Content Include="BOM\Default.aspx" />
+    <Content Include="Contents\font-awesome\css\font-awesome.css" />
+    <Content Include="Contents\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Contents\Images\toacs_logo.png" />
+    <Content Include="Scripts\js\bootstrap.js" />
+    <Content Include="Scripts\js\bootstrap.min.js" />
+    <Content Include="Scripts\js\date.js" />
+    <Content Include="Scripts\js\demo\dashboard-demo.js" />
+    <Content Include="Scripts\js\demo\flot-demo.js" />
+    <Content Include="Scripts\js\demo\morris-demo.js" />
+    <Content Include="Scripts\js\jquery-1.10.2.js" />
+    <Content Include="Scripts\js\jquery.ganttView.js" />
+    <Content Include="Scripts\js\plugins\dataTables\dataTables.bootstrap.js" />
+    <Content Include="Scripts\js\plugins\dataTables\jquery.dataTables.js" />
+    <Content Include="Scripts\js\plugins\flot\excanvas.min.js" />
+    <Content Include="Scripts\js\plugins\flot\jquery.flot.js" />
+    <Content Include="Scripts\js\plugins\flot\jquery.flot.pie.js" />
+    <Content Include="Scripts\js\plugins\flot\jquery.flot.resize.js" />
+    <Content Include="Scripts\js\plugins\flot\jquery.flot.tooltip.min.js" />
+    <Content Include="Scripts\js\plugins\metisMenu\jquery.metisMenu.js" />
+    <Content Include="Scripts\js\plugins\morris\morris.js" />
+    <Content Include="Scripts\js\plugins\morris\raphael-2.1.0.min.js" />
+    <Content Include="Scripts\js\sb-admin.js" />
+    <Content Include="Contents\Styles\bootstrap\bootstrap.css" />
+    <Content Include="Contents\Styles\bootstrap\bootstrap.min.css" />
+    <Content Include="Contents\Styles\bootstrap\plugins\dataTables\dataTables.bootstrap.css" />
+    <Content Include="Contents\Styles\bootstrap\plugins\morris\morris-0.4.3.min.css" />
+    <Content Include="Contents\Styles\bootstrap\plugins\social-buttons\social-buttons.css" />
+    <Content Include="Contents\Styles\bootstrap\plugins\timeline\timeline.css" />
+    <Content Include="Contents\Styles\bootstrap\sb-admin.css" />
     <Content Include="Contents\Styles\DayPivot\calendar_green.css" />
     <Content Include="Contents\Styles\DayPivot\calendar_transparent.css" />
     <Content Include="Contents\Styles\DayPivot\calendar_white.css" />
@@ -86,6 +115,7 @@
     <Content Include="Finishing\Default.aspx" />
     <Content Include="ForecastOrder\Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="index.html" />
     <Content Include="Kanban\Default.aspx" />
     <Content Include="Libraries\FlexigridASPNET.dll" />
     <Content Include="Libraries\FlexigridASPNET.pdb" />
@@ -101,6 +131,41 @@
     <Content Include="Scripts\json2.js" />
     <Content Include="Scripts\list-view.js" />
     <None Include="App_Data\forecast.xlsx" />
+    <None Include="Contents\font-awesome\fonts\fontawesome-webfont.eot" />
+    <None Include="Contents\font-awesome\fonts\fontawesome-webfont.svg" />
+    <None Include="Contents\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <None Include="Contents\font-awesome\fonts\fontawesome-webfont.woff" />
+    <None Include="Contents\font-awesome\fonts\FontAwesome.otf" />
+    <None Include="Contents\font-awesome\less\bordered-pulled.less" />
+    <None Include="Contents\font-awesome\less\core.less" />
+    <None Include="Contents\font-awesome\less\fixed-width.less" />
+    <None Include="Contents\font-awesome\less\font-awesome.less" />
+    <None Include="Contents\font-awesome\less\icons.less" />
+    <None Include="Contents\font-awesome\less\larger.less" />
+    <None Include="Contents\font-awesome\less\list.less" />
+    <None Include="Contents\font-awesome\less\mixins.less" />
+    <None Include="Contents\font-awesome\less\path.less" />
+    <None Include="Contents\font-awesome\less\rotated-flipped.less" />
+    <None Include="Contents\font-awesome\less\spinning.less" />
+    <None Include="Contents\font-awesome\less\stacked.less" />
+    <None Include="Contents\font-awesome\less\variables.less" />
+    <None Include="Contents\font-awesome\scss\font-awesome.scss" />
+    <None Include="Contents\font-awesome\scss\_bordered-pulled.scss" />
+    <None Include="Contents\font-awesome\scss\_core.scss" />
+    <None Include="Contents\font-awesome\scss\_fixed-width.scss" />
+    <None Include="Contents\font-awesome\scss\_icons.scss" />
+    <None Include="Contents\font-awesome\scss\_larger.scss" />
+    <None Include="Contents\font-awesome\scss\_list.scss" />
+    <None Include="Contents\font-awesome\scss\_mixins.scss" />
+    <None Include="Contents\font-awesome\scss\_path.scss" />
+    <None Include="Contents\font-awesome\scss\_rotated-flipped.scss" />
+    <None Include="Contents\font-awesome\scss\_spinning.scss" />
+    <None Include="Contents\font-awesome\scss\_stacked.scss" />
+    <None Include="Contents\font-awesome\scss\_variables.scss" />
+    <None Include="Contents\fonts\glyphicons-halflings-regular.eot" />
+    <None Include="Contents\fonts\glyphicons-halflings-regular.svg" />
+    <None Include="Contents\fonts\glyphicons-halflings-regular.ttf" />
+    <None Include="Contents\fonts\glyphicons-halflings-regular.woff" />
     <None Include="Service References\TOACSRefferences\Service.disco" />
     <None Include="Service References\TOACSRefferences\configuration91.svcinfo" />
     <None Include="Service References\TOACSRefferences\configuration.svcinfo" />
@@ -201,8 +266,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_LocalResources\" />
-    <Folder Include="Contents\Images\" />
-    <Folder Include="Contents\Scripts\" />
     <Folder Include="Controls\" />
     <Folder Include="Masters\" />
   </ItemGroup>
