--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -75,6 +75,7 @@
     <Content Include="Contents\Images\toacs_logo.png" />
     <Content Include="Contents\Images\ui-bg_highlight-hard_75_dadada_1x100.png" />
     <Content Include="Contents\Styles\jquery.ganttView.css" />
+    <Content Include="Contents\Styles\reset.css" />
     <Content Include="Contents\Styles\themes\black\accordion.css" />
     <Content Include="Contents\Styles\themes\black\calendar.css" />
     <Content Include="Contents\Styles\themes\black\combo.css" />
@@ -338,6 +339,7 @@
     <Content Include="Contents\Styles\themes\metro\tree.css" />
     <Content Include="Contents\Styles\themes\metro\validatebox.css" />
     <Content Include="Contents\Styles\themes\metro\window.css" />
+    <Content Include="Kanban\Schedule.aspx" />
     <Content Include="Scripts\jquery.easyui.min.js" />
     <Content Include="Scripts\jquery.ganttView.js" />
     <Content Include="Scripts\js\bootstrap.js" />
@@ -515,6 +517,13 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Code\GroupedGridView.cs" />
+    <Compile Include="Kanban\Schedule.aspx.cs">
+      <DependentUpon>Schedule.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Kanban\Schedule.aspx.designer.cs">
+      <DependentUpon>Schedule.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TOACSRefferences\Reference.cs">
       <AutoGen>True</AutoGen>
