update schedule pages

--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -447,6 +447,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="Scripts\prettify.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
