--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -69,7 +69,6 @@
   <ItemGroup>
     <Content Include="Administrator\Default.aspx" />
     <Content Include="Administrator\UserControls\ctrlSetServer.ascx" />
-    <Content Include="BOM\Default.aspx" />
     <Content Include="Contents\font-awesome\css\font-awesome.css" />
     <Content Include="Contents\font-awesome\css\font-awesome.min.css" />
     <Content Include="Contents\Images\grid.png" />
@@ -345,8 +344,22 @@
     <Content Include="Contents\Styles\themes\metro\tree.css" />
     <Content Include="Contents\Styles\themes\metro\validatebox.css" />
     <Content Include="Contents\Styles\themes\metro\window.css" />
+    <Content Include="Import\FinishingOrder.aspx" />
+    <Content Include="Import\ForcastOrder.aspx" />
+    <Content Include="Inventory\Extrusion.aspx" />
+    <Content Include="Inventory\Finishing.aspx" />
+    <Content Include="Inventory\Monitoring.aspx" />
+    <Content Include="Inventory\Standard.aspx" />
     <Content Include="Kanban\Schedule.aspx" />
-    <Content Include="Kanban\Schedule2.aspx" />
+    <Content Include="Masters\Customers.aspx" />
+    <Content Include="Masters\EXTMapFinParts.aspx" />
+    <Content Include="Masters\Line.aspx" />
+    <Content Include="Masters\Models.aspx" />
+    <Content Include="Masters\ModelStructures.aspx" />
+    <Content Include="Masters\Parts.aspx" />
+    <Content Include="Masters\PDLosttime.aspx" />
+    <Content Include="Masters\UserGroups.aspx" />
+    <Content Include="Masters\Users.aspx" />
     <Content Include="Scripts\jquery.easyui.min.js" />
     <Content Include="Scripts\jquery.fn.gantt.js" />
     <Content Include="Scripts\jquery.ganttView.js" />
@@ -388,11 +401,7 @@
     <Content Include="Contents\Styles\Master.css" />
     <Content Include="Contents\Styles\ui.jqgrid.css" />
     <Content Include="Default.aspx" />
-    <Content Include="Extrusion\Default.aspx" />
-    <Content Include="Finishing\Default.aspx" />
-    <Content Include="ForecastOrder\Default.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="index.html" />
     <Content Include="Kanban\Default.aspx" />
     <Content Include="Libraries\FlexigridASPNET.dll" />
     <Content Include="Libraries\FlexigridASPNET.pdb" />
@@ -478,13 +487,6 @@
     <Compile Include="Administrator\UserControls\ctrlSetServer.ascx.designer.cs">
       <DependentUpon>ctrlSetServer.ascx</DependentUpon>
     </Compile>
-    <Compile Include="BOM\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="BOM\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -492,32 +494,53 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Extrusion\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Extrusion\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Finishing\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Finishing\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="ForecastOrder\Default.aspx.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="ForecastOrder\Default.aspx.designer.cs">
-      <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Handler\KanbanListHandler.cs" />
     <Compile Include="Helper\SessionHelper.cs" />
+    <Compile Include="Import\FinishingOrder.aspx.cs">
+      <DependentUpon>FinishingOrder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Import\FinishingOrder.aspx.designer.cs">
+      <DependentUpon>FinishingOrder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Import\ForcastOrder.aspx.cs">
+      <DependentUpon>ForcastOrder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Import\ForcastOrder.aspx.designer.cs">
+      <DependentUpon>ForcastOrder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inventory\Extrusion.aspx.cs">
+      <DependentUpon>Extrusion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inventory\Extrusion.aspx.designer.cs">
+      <DependentUpon>Extrusion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inventory\Finishing.aspx.cs">
+      <DependentUpon>Finishing.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inventory\Finishing.aspx.designer.cs">
+      <DependentUpon>Finishing.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inventory\Monitoring.aspx.cs">
+      <DependentUpon>Monitoring.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inventory\Monitoring.aspx.designer.cs">
+      <DependentUpon>Monitoring.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inventory\Standard.aspx.cs">
+      <DependentUpon>Standard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inventory\Standard.aspx.designer.cs">
+      <DependentUpon>Standard.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Kanban\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -533,12 +556,68 @@
     <Compile Include="Kanban\Schedule.aspx.designer.cs">
       <DependentUpon>Schedule.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Kanban\Schedule2.aspx.cs">
-      <DependentUpon>Schedule2.aspx</DependentUpon>
+    <Compile Include="Masters\Customers.aspx.cs">
+      <DependentUpon>Customers.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Kanban\Schedule2.aspx.designer.cs">
-      <DependentUpon>Schedule2.aspx</DependentUpon>
+    <Compile Include="Masters\Customers.aspx.designer.cs">
+      <DependentUpon>Customers.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\EXTMapFinParts.aspx.cs">
+      <DependentUpon>EXTMapFinParts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\EXTMapFinParts.aspx.designer.cs">
+      <DependentUpon>EXTMapFinParts.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\Line.aspx.cs">
+      <DependentUpon>Line.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\Line.aspx.designer.cs">
+      <DependentUpon>Line.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\Models.aspx.cs">
+      <DependentUpon>Models.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\Models.aspx.designer.cs">
+      <DependentUpon>Models.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\ModelStructures.aspx.cs">
+      <DependentUpon>ModelStructures.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\ModelStructures.aspx.designer.cs">
+      <DependentUpon>ModelStructures.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\Parts.aspx.cs">
+      <DependentUpon>Parts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\Parts.aspx.designer.cs">
+      <DependentUpon>Parts.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\PDLosttime.aspx.cs">
+      <DependentUpon>PDLosttime.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\PDLosttime.aspx.designer.cs">
+      <DependentUpon>PDLosttime.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\UserGroups.aspx.cs">
+      <DependentUpon>UserGroups.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\UserGroups.aspx.designer.cs">
+      <DependentUpon>UserGroups.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\Users.aspx.cs">
+      <DependentUpon>Users.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\Users.aspx.designer.cs">
+      <DependentUpon>Users.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TOACSRefferences\Reference.cs">
@@ -564,7 +643,8 @@
   <ItemGroup>
     <Folder Include="App_LocalResources\" />
     <Folder Include="Controls\" />
-    <Folder Include="Masters\" />
+    <Folder Include="Production\Extrusion\" />
+    <Folder Include="Production\Finishing\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Template\Main.Master" />
