update db add part master page. add pd pages

--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -10,6 +10,7 @@
   <system.web>
     <httpHandlers>
       <add path="HandlerKanbanList.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.KanbanListHandler"/>
+      <add path="PartMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PartMasterHandler"/>
     </httpHandlers>
     <pages>
       <controls>
