--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -47,6 +47,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\Newtonsoft.Json.Net35.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
@@ -360,6 +361,8 @@
     <Content Include="Masters\PDLosttime.aspx" />
     <Content Include="Masters\UserGroups.aspx" />
     <Content Include="Masters\Users.aspx" />
+    <Content Include="Production\Default.aspx" />
+    <Content Include="Production\PdLogin.aspx" />
     <Content Include="Scripts\jquery.easyui.min.js" />
     <Content Include="Scripts\jquery.fn.gantt.js" />
     <Content Include="Scripts\jquery.ganttView.js" />
@@ -471,6 +474,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Template\Site1.Master" />
+    <Content Include="Template\Production.Master" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administrator\Default.aspx.cs">
@@ -498,6 +502,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Handler\KanbanListHandler.cs" />
+    <Compile Include="Handler\PartMasterHandler.cs" />
     <Compile Include="Helper\SessionHelper.cs" />
     <Compile Include="Import\FinishingOrder.aspx.cs">
       <DependentUpon>FinishingOrder.aspx</DependentUpon>
@@ -619,6 +624,20 @@
     <Compile Include="Masters\Users.aspx.designer.cs">
       <DependentUpon>Users.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Production\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Production\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Production\PdLogin.aspx.cs">
+      <DependentUpon>PdLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Production\PdLogin.aspx.designer.cs">
+      <DependentUpon>PdLogin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TOACSRefferences\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -632,6 +651,13 @@
     <Compile Include="Template\Main.Master.designer.cs">
       <DependentUpon>Main.Master</DependentUpon>
     </Compile>
+    <Compile Include="Template\Production.Master.cs">
+      <DependentUpon>Production.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Template\Production.Master.designer.cs">
+      <DependentUpon>Production.Master</DependentUpon>
+    </Compile>
     <Compile Include="Template\Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -641,8 +667,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_LocalResources\" />
-    <Folder Include="Controls\" />
     <Folder Include="Production\Extrusion\" />
     <Folder Include="Production\Finishing\" />
   </ItemGroup>
