--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -79,6 +79,13 @@
     <Content Include="Contents\Images\toacs_logo.png" />
     <Content Include="Contents\Images\ui-bg_highlight-hard_75_dadada_1x100.png" />
     <Content Include="Contents\Images\ui-bg_highlight-hard_75_e6e6e6_1x100.png" />
+    <Content Include="Contents\Styles\images\grid.png" />
+    <Content Include="Contents\Styles\images\icon_sprite.png" />
+    <Content Include="Contents\Styles\images\loader_bg.png" />
+    <Content Include="Contents\Styles\images\slider_handle.png" />
+    <Content Include="Contents\Styles\images\ui-bg_glass_85_dfeffc_1x400.png" />
+    <Content Include="Contents\Styles\images\ui-bg_highlight-hard_75_dadada_1x100.png" />
+    <Content Include="Contents\Styles\images\ui-bg_highlight-hard_75_e6e6e6_1x100.png" />
     <Content Include="Contents\Styles\jquery.Gantt.css" />
     <Content Include="Contents\Styles\jquery.ganttView.css" />
     <Content Include="Contents\Styles\reset.css" />
@@ -362,14 +369,14 @@
     <Content Include="Masters\UserGroups.aspx" />
     <Content Include="Masters\Users.aspx" />
     <Content Include="Production\Default.aspx" />
-    <Content Include="Production\ExtrusinOrderCreate.aspx" />
+    <Content Include="Production\ExtrusionOrderCreate.aspx" />
     <Content Include="Production\ExtrusionOrderComplete.aspx" />
     <Content Include="Production\ExtrusionScan.aspx" />
     <Content Include="Production\ExtrusionSelection.aspx" />
     <Content Include="Production\FinishingOrderComplete.aspx" />
     <Content Include="Production\FinishingOrderCreate.aspx" />
-    <Content Include="Production\FinishingScan.aspx" />
-    <Content Include="Production\PdLogin.aspx" />
+    <Content Include="Production\FinishingSelection.aspx" />
+    <Content Include="Scripts\combodate.js" />
     <Content Include="Scripts\jquery.easyui.min.js" />
     <Content Include="Scripts\jquery.fn.gantt.js" />
     <Content Include="Scripts\jquery.ganttView.js" />
@@ -638,12 +645,12 @@
     <Compile Include="Production\Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Production\ExtrusinOrderCreate.aspx.cs">
-      <DependentUpon>ExtrusinOrderCreate.aspx</DependentUpon>
+    <Compile Include="Production\ExtrusionOrderCreate.aspx.cs">
+      <DependentUpon>ExtrusionOrderCreate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Production\ExtrusinOrderCreate.aspx.designer.cs">
-      <DependentUpon>ExtrusinOrderCreate.aspx</DependentUpon>
+    <Compile Include="Production\ExtrusionOrderCreate.aspx.designer.cs">
+      <DependentUpon>ExtrusionOrderCreate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Production\ExtrusionOrderComplete.aspx.cs">
       <DependentUpon>ExtrusionOrderComplete.aspx</DependentUpon>
@@ -680,19 +687,12 @@
     <Compile Include="Production\FinishingOrderCreate.aspx.designer.cs">
       <DependentUpon>FinishingOrderCreate.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Production\FinishingScan.aspx.cs">
-      <DependentUpon>FinishingScan.aspx</DependentUpon>
+    <Compile Include="Production\FinishingSelection.aspx.cs">
+      <DependentUpon>FinishingSelection.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Production\FinishingScan.aspx.designer.cs">
-      <DependentUpon>FinishingScan.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Production\PdLogin.aspx.cs">
-      <DependentUpon>PdLogin.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Production\PdLogin.aspx.designer.cs">
-      <DependentUpon>PdLogin.aspx</DependentUpon>
+    <Compile Include="Production\FinishingSelection.aspx.designer.cs">
+      <DependentUpon>FinishingSelection.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\TOACSRefferences\Reference.cs">
