--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -11,6 +11,7 @@
     <httpHandlers>
       <add path="HandlerKanbanList.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.KanbanListHandler"/>
       <add path="PartMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PartMasterHandler"/>
+      <add path="PlanManagementHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PlanManagementHandler"/>
     </httpHandlers>
     <pages>
       <controls>
