--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Services/Toacts.KanbanPost.Services.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Services/Toacts.KanbanPost.Services.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BLL\ForecastOrder.cs" />
     <Compile Include="BLL\Kanban.cs" />
     <Compile Include="BLL\MAParts.cs" />
+    <Compile Include="BLL\Monitoring.cs" />
     <Compile Include="EF\TAC_KANBAN.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
