--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -12,6 +12,7 @@
       <add path="HandlerKanbanList.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.KanbanListHandler"/>
       <add path="PartMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PartMasterHandler"/>
       <add path="PlanManagementHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PlanManagementHandler"/>
+      <add path="StockMonitoringHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.StockMonitoringHandler"/>
     </httpHandlers>
     <pages>
       <controls>
