add forecast handler

--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -12,7 +12,8 @@
       <add path="HandlerKanbanList.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.KanbanListHandler"/>
       <add path="PartMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PartMasterHandler"/>
       <add path="PlanManagementHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PlanManagementHandler"/>
-      <add path="StockMonitoringHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.StockMonitoringHandler"/>
+      <add path="PDScheduleHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PDScheduleHandler"/>
+      <add path="MasterStockHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.MasterStockHandler"/>
     </httpHandlers>
     <pages>
       <controls>
