--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -532,6 +532,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Handler\KanbanListHandler.cs" />
+    <Compile Include="Handler\MasterStockHandler.cs" />
     <Compile Include="Handler\PartMasterHandler.cs" />
     <Compile Include="Handler\PDScheduleHandler.cs" />
     <Compile Include="Handler\PlanManagementHandler.cs" />
