->add git ignore ->add forecast,finishing

--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -531,6 +531,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Handler\ForecastOrderHandler.cs" />
     <Compile Include="Handler\KanbanListHandler.cs" />
     <Compile Include="Handler\MasterStockHandler.cs" />
     <Compile Include="Handler\PartMasterHandler.cs" />
