--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -14,6 +14,7 @@
       <add path="PlanManagementHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PlanManagementHandler"/>
       <add path="PDScheduleHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PDScheduleHandler"/>
       <add path="MasterStockHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.MasterStockHandler"/>
+      <add path="ForecastOrderHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.ForecastOrderHandler"/>
     </httpHandlers>
     <pages>
       <controls>
