--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Web.config
@@ -12,15 +12,7 @@
       <add path="HandlerKanbanList.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.KanbanListHandler"/>
       <add path="PartMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PartMasterHandler"/>
       <add path="PlanManagementHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PlanManagementHandler"/>
-      <add path="PDScheduleHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.PDScheduleHandler"/>
-      <add path="MasterStockHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.MasterStockHandler"/>
-      <add path="ForecastOrderHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.ForecastOrderHandler"/>
-      <add path="LosttimeMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.LosttimeMasterHandler"/>
-      <add path="LineMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.LineMasterHandler"/>
-      <add path="OperatorRoleMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.OperatorRoleMasterHandler"/>
-      <add path="CustomerMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.CustomerMasterHandler"/>
-      <add path="OperatorMasterHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.OperatorMasterHandler"/>
-
+      <add path="StockMonitoringHandler.axd" verb="POST,GET" type="Toacts.KanbanPost.Layout.Handler.StockMonitoringHandler"/>
     </httpHandlers>
     <pages>
       <controls>
