--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Services/Web.config
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Services/Web.config
@@ -23,5 +23,7 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
-
-<connectionStrings><add name="TAC_KANBANEntities" connectionString="metadata=res://*/EF.TAC_KANBAN.csdl|res://*/EF.TAC_KANBAN.ssdl|res://*/EF.TAC_KANBAN.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost\SQLExpress;Initial Catalog=TAC_KANBAN;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="TAC_KANBAN" connectionString="metadata=res://*/EF.TAC_KANBAN.csdl|res://*/EF.TAC_KANBAN.ssdl|res://*/EF.TAC_KANBAN.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=RATAPONG-PC;Initial Catalog=TAC_KANBAN;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="TAC_KANBANEntities" connectionString="metadata=res://*/EF.TAC_KANBAN.csdl|res://*/EF.TAC_KANBAN.ssdl|res://*/EF.TAC_KANBAN.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=RATAPONG-PC;Initial Catalog=TAC_KANBAN;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
