--- a/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
+++ b/KANBANPost/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout/Toacts.KanbanPost.Layout.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AspNet.ScriptManager.jQuery">
-      <HintPath>..\packages\AspNet.ScriptManager.jQuery.2.0.3\lib\net40\AspNet.ScriptManager.jQuery.dll</HintPath>
+      <HintPath>..\packages\AspNet.ScriptManager.jQuery.2.1.1\lib\net40\AspNet.ScriptManager.jQuery.dll</HintPath>
     </Reference>
     <Reference Include="FlexigridASPNET, Version=1.0.4462.38746, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -77,7 +77,6 @@
     <Content Include="Contents\Images\loader_bg.png" />
     <Content Include="Contents\Images\slider_handle.png" />
     <Content Include="Contents\Images\toacs_logo.png" />
-    <Content Include="Contents\Images\ui-bg_glass_85_dfeffc_1x400.png" />
     <Content Include="Contents\Images\ui-bg_highlight-hard_75_dadada_1x100.png" />
     <Content Include="Contents\Images\ui-bg_highlight-hard_75_e6e6e6_1x100.png" />
     <Content Include="Contents\Styles\images\grid.png" />
@@ -361,7 +360,6 @@
     <Content Include="Inventory\Standard.aspx" />
     <Content Include="Kanban\PlanManagement.aspx" />
     <Content Include="Kanban\Schedule.aspx" />
-    <Content Include="Login.aspx" />
     <Content Include="Masters\Customers.aspx" />
     <Content Include="Masters\EXTMapFinParts.aspx" />
     <Content Include="Masters\Line.aspx" />
@@ -371,6 +369,7 @@
     <Content Include="Masters\PDLosttime.aspx" />
     <Content Include="Masters\UserGroups.aspx" />
     <Content Include="Masters\Users.aspx" />
+    <Content Include="Production\Default.aspx" />
     <Content Include="Production\ExtrusionOrderCreate.aspx" />
     <Content Include="Production\ExtrusionOrderComplete.aspx" />
     <Content Include="Production\ExtrusionScan.aspx" />
@@ -378,9 +377,8 @@
     <Content Include="Production\FinishingOrderComplete.aspx" />
     <Content Include="Production\FinishingOrderCreate.aspx" />
     <Content Include="Production\FinishingSelection.aspx" />
-    <Content Include="Production\PDScheudle.aspx" />
     <Content Include="Scripts\combodate.js" />
-    <Content Include="Scripts\datagrid-detailview.js" />
+    <Content Include="Scripts\javascript.grid.js" />
     <Content Include="Scripts\jquery.easyui.min.js" />
     <Content Include="Scripts\jquery.fn.gantt.js" />
     <Content Include="Scripts\jquery.ganttView.js" />
@@ -470,9 +468,7 @@
     <None Include="Contents\fonts\glyphicons-halflings-regular.svg" />
     <None Include="Contents\fonts\glyphicons-halflings-regular.ttf" />
     <None Include="Contents\fonts\glyphicons-halflings-regular.woff" />
-    <None Include="Properties\DataSources\Toacts.KanbanPost.Services.BLL.KanbanList.datasource" />
-    <None Include="Properties\DataSources\Toacts.KanbanPost.Services.BLL.Part.datasource" />
-    <None Include="Properties\DataSources\Toacts.KanbanPost.Services.CompositeType.datasource" />
+    <None Include="Service References\TOACSRefferences\Service.disco" />
     <None Include="Service References\TOACSRefferences\configuration91.svcinfo" />
     <None Include="Service References\TOACSRefferences\configuration.svcinfo" />
     <None Include="Service References\TOACSRefferences\Reference.svcmap">
@@ -480,31 +476,21 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <Content Include="Scripts\prettify.js" />
-    <None Include="Service References\TOACSRefferences\Service1.disco" />
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <None Include="Service References\TOACSRefferences\Service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TOACSRefferences\Service2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Template\Site1.Master" />
     <Content Include="Template\Production.Master" />
-    <None Include="Service References\TOACSRefferences\Service11.wsdl" />
-    <None Include="Service References\TOACSRefferences\Service4.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\TOACSRefferences\Service41.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\TOACSRefferences\Service42.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\TOACSRefferences\Service43.xsd">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administrator\Default.aspx.cs">
@@ -531,17 +517,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Handler\CustomerMasterHandler.cs" />
-    <Compile Include="Handler\ForecastOrderHandler.cs" />
     <Compile Include="Handler\KanbanListHandler.cs" />
-    <Compile Include="Handler\LineMasterHandler.cs" />
-    <Compile Include="Handler\LosttimeMasterHandler.cs" />
-    <Compile Include="Handler\MasterStockHandler.cs" />
-    <Compile Include="Handler\OperatorMasterHandler.cs" />
-    <Compile Include="Handler\OperatorRoleMasterHandler.cs" />
     <Compile Include="Handler\PartMasterHandler.cs" />
-    <Compile Include="Handler\PDScheduleHandler.cs" />
     <Compile Include="Handler\PlanManagementHandler.cs" />
+    <Compile Include="Handler\StockMonitoringHandler.cs" />
     <Compile Include="Helper\SessionHelper.cs" />
     <Compile Include="Import\FinishingOrder.aspx.cs">
       <DependentUpon>FinishingOrder.aspx</DependentUpon>
@@ -607,13 +586,6 @@
     <Compile Include="Kanban\Schedule.aspx.designer.cs">
       <DependentUpon>Schedule.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Masters\Customers.aspx.cs">
       <DependentUpon>Customers.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -677,6 +649,14 @@
     <Compile Include="Masters\Users.aspx.designer.cs">
       <DependentUpon>Users.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Objects\ResponseData.cs" />
+    <Compile Include="Production\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Production\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Production\ExtrusionOrderCreate.aspx.cs">
       <DependentUpon>ExtrusionOrderCreate.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -726,14 +706,8 @@
     <Compile Include="Production\FinishingSelection.aspx.designer.cs">
       <DependentUpon>FinishingSelection.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Production\PDScheudle.aspx.cs">
-      <DependentUpon>PDScheudle.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Production\PDScheudle.aspx.designer.cs">
-      <DependentUpon>PDScheudle.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resource\SystemResource.cs" />
     <Compile Include="Service References\TOACSRefferences\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -777,6 +751,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Service References\TOACSRefferences\Service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\TOACSRefferences\Service1.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
